# rmhstudios.com

./: .bazelrc  .dockerignore  .editorconfig  .env.example  .env.example.minimum  .gitignore  .gitignore 2  .npmrc  .prettierignore  .sops.yaml  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MODULE.bazel  Makefile  NEW_SECURITY_REPORT.md  PR_SECURITY_FIXES.md  README 2.md  README.md  SECURITY-AUDIT-REPORT.md  SECURITY.md  UI_REDESIGN.md  _shots.mjs  app.config.ts  autodeploy.sh  build_log_gameover.txt  build_log_shadow.txt  build_log_theme.txt  build_log_theme_shadow.txt  check-types.sh  check_db.js  deploy.sh  docker-bake.hcl  docker-compose.cache.yml  docker-compose.yml  echoes.md  error.json  eslint.config.mjs  (+29 more)
.github/: dependabot.yml  labeler.yml  lighthouserc.json  lighthouserc.mobile.json  pull_request_template.md
.openai/: hosting.json
app/: CLAUDE.md  globals.css  layout.tsx  page.tsx  routeTree.gen.ts  router.tsx  ssr.tsx  theme.css
bazel/: defs.bzl
canvas-ui/: index.ts
cli/: package.json
components/: CLAUDE.md  ComingSoonGate.tsx  Providers 2.tsx  Providers.tsx  SteveJobsQuote.tsx
contexts/: MouseContext.tsx
data/: library-metadata.json  site-knowledge.json  steve-jobs-quotes.json  steve-jobs-quotes.ts
deploy/: .gitignore  README.md  SECRETS.md  apply-cloudflare-cache-rules.sh  apply-perf-tuning.sh  deploy-go.sh  deploy-k8s.sh  disk-report.sh  hotswap-web.sh  move-docker-storage.sh  setup-buildx-cache.sh
dist-server/: socket-server.js
docs/: README.md  albums-storage.md  architecture.md  canvas-architecture.md  ci-speed-audit-2026-07-17.md  codebase-overview.md  coins.md  design-language.md  developer-api.md  full-rewrite-design-2026-07-18.md  improvement-plan.md  mobile-friendliness-audit.md  page-consistency.md  performance-audit-2026-07-17.md  performance-slo.md  rmhladder-operations.md  scalability-audit-2026-07-17.md  security-audit-2026-07-12.md  security-audit-2026-07-13.md  signal-forge-better.md  signal-forge-production-spec.md  signal-forge.md  testing.md  web-game-design-idea.md  website-improvement-plan.md
e2e/: canvas-census.spec.ts  route-urls.ts
go-services/: .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  CLAUDE.md  Dockerfile  FOUNDATION.md  Makefile  README.md  docker-compose.go.yml  go.mod  go.sum
go-services/cmd/assets/: BUILD.bazel  main.go
go-services/cmd/bot-worker/: BUILD.bazel  main.go
go-services/cmd/discord-bot/: BUILD.bazel  main.go
go-services/cmd/doctrine-worker/: BUILD.bazel  main.go
go-services/cmd/gateway/: BUILD.bazel  main.go
go-services/cmd/recap/: BUILD.bazel  main.go
go-services/cmd/rmhbox/: BUILD.bazel  main.go
go-services/cmd/rmhmusic/: BUILD.bazel  main.go
go-services/cmd/rmhtube/: BUILD.bazel  main.go
go-services/cmd/status/: BUILD.bazel  dbprobe.go  main.go  main_test.go
go-services/cmd/supervisor/: BUILD.bazel  main.go  main_test.go  run.go
go-services/cmd/vibe-worker/: BUILD.bazel  main.go
go-services/e2e/: BUILD.bazel  auth_rmhtube_e2e_test.go  gamehub_e2e_test.go  harness.go  supervisor_e2e_test.go
go-services/images/: BUILD.bazel
go-services/internal/assets/: BUILD.bazel  handler.go  handler_test.go
go-services/internal/botworker/: BUILD.bazel  deepseek.go  dmpolicy.go  dmpolicy_test.go  image.go  image_test.go  notify.go  notify_test.go  prompt_test.go  query_test.go  repo.go  repo_social.go  repo_test.go  run.go  storage.go  storage_test.go  ticks.go  types.go  worker.go  worker_test.go
go-services/internal/discordbot/: BUILD.bazel  bot.go  chat.go  chat_memory.go  chat_memory_test.go  deepseek.go  discordbot_test.go  interactions.go  pet.go  pet_ai.go  pet_care.go  pet_events.go  pet_image.go  pet_intro.go  pet_presence.go  pet_repo.go  pet_service.go  rmhbot.go  run.go  run_test.go
go-services/internal/doctrine/: BUILD.bazel  run.go  run_test.go  schedule.go  seed.go  seed_test.go  worker.go
go-services/internal/gamehub/: BUILD.bazel  kk.go  kk_test.go  manager.go  relay.go
go-services/internal/gateway/: BUILD.bazel  auth_middleware.go  gateway_test.go  proxy.go
go-services/internal/recap/: BUILD.bazel  lightsout.go  recap.go  recap_test.go  run.go  run_test.go  runner.go
go-services/internal/rmhbox/: BUILD.bazel  coordinator.go  lobby.go  lobby_ops.go  manager.go  minigame.go  minigames.go  registry.go  repo.go  rmhbox_test.go  statesync.go  types.go
go-services/internal/rmhmusic/: BUILD.bazel  chat.go  events.go  manager.go  queue.go  repo.go  rmhmusic_test.go  room.go  sync.go  types.go  util.go
go-services/internal/rmhtube/: BUILD.bazel  chat.go  events.go  manager.go  queue.go  repo.go  rmhtube_test.go  room.go  snapshot.go  sync.go  types.go  utils.go
go-services/internal/status/: BUILD.bazel  dashboard.go  dashboard_test.go  persist.go  persist_test.go  probe.go  probe_test.go  status.go
go-services/internal/streaksaver/: BUILD.bazel  push.go  run.go
go-services/internal/vibeworker/: BUILD.bazel  capture.go  repo.go  run.go  run_test.go  storage.go  worker.go  worker_test.go
go-services/pkg/auth/: BUILD.bazel  auth.go
hooks/: useActiveFriends.ts  useCardSheen.ts  useCelebration.ts  useClickOutside.ts  useClipboard.ts  useComposeDraft.ts  useDebounce.ts  useDoctrineCountdown.ts  useDoctrineDivisiveness.ts  useDoctrinePuzzleState.ts  useDoctrineReputation.ts  useDoctrineSahur.ts  useDoctrineSound.ts  useFeedSSE.ts  useGlassLight.ts  useHistoryBeat.ts  useIdleReady.ts  useIntentPreload.ts  useIsDesktop.ts  useIsMobile 2.ts  useIsMobile.ts  useLiquidBackground.ts  useLiquidBody.ts  useLiquidLink.ts  useLocalStorage.ts  useMenuViewportFit.ts  useNearViewport.ts  useOnlineStatus.ts  useOptimisticAction.ts  useParallax.ts  useParty.ts  usePerformanceMode.ts  useRecents.ts  useReducedMotion.ts  useScrollRestoration.ts  useSpatialParallax.ts  useStableListMotion.ts  useWindowSize.ts
lib/: CLAUDE.md  achievements.server.ts  admin-audit.server.ts  admin-review.server.ts  albums.admin.server.ts  albums.server.ts  albums.ts  analytics.server.ts  announcement-schema.ts  api-utils.ts  appearance.ts  apps.ts  auth 2.ts  (+126 more)
(+7233 files in other folders)
