module(
    name = "rmhstudios",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "platforms", version = "0.0.10")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go-services:go.mod")
# use_repo(go_deps, ...) is populated by `bazelisk mod tidy`.

use_repo(go_deps, "com_github_aws_aws_sdk_go_v2", "com_github_aws_aws_sdk_go_v2_config", "com_github_aws_aws_sdk_go_v2_credentials", "com_github_aws_aws_sdk_go_v2_service_s3", "com_github_bwmarrin_discordgo", "com_github_chromedp_cdproto", "com_github_chromedp_chromedp", "com_github_google_uuid", "com_github_jackc_pgx_v5", "com_github_prometheus_client_golang", "org_golang_x_sync")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:d093aa3e30dbadd3efe1310db061a14da60299baff8450a17fe0ccc514a16639",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

# Special runtime bases, built + pushed by `make base-images` (see
# deploy/docker/*.Dockerfile). Referenced by tag; lazily fetched only when the
# vibe-worker / discord-bot images are built.
oci.pull(
    name = "base_chromium",
    image = "ghcr.io/rmhstudios/rmhstudios-go-base-chromium",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    reproducible = False,
    tag = "latest",
)
oci.pull(
    name = "base_git",
    image = "ghcr.io/rmhstudios/rmhstudios-go-base-git",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    reproducible = False,
    tag = "latest",
)
oci.pull(
    name = "base_chromium_git",
    image = "ghcr.io/rmhstudios/rmhstudios-go-base-chromium-git",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    reproducible = False,
    tag = "latest",
)
use_repo(oci, "base_chromium", "base_chromium_git", "base_chromium_git_linux_amd64", "base_chromium_git_linux_arm64_v8", "base_chromium_linux_amd64", "base_chromium_linux_arm64_v8", "base_git", "base_git_linux_amd64", "base_git_linux_arm64_v8")
