# gazelle:ignore
# This package is gated behind the `e2e` build tag and is invoked via
#   go test -tags e2e ./e2e/...   (CI: the `e2e` job runs scripts/e2e/run.sh,
# which starts Postgres + the service binaries first).
# These tests dial running services and t.Fatalf on connection-refused, so they
# must NOT run in the plain `bazelisk test //go-services/...` unit gate (the
# `build-test` job), where no services are up. The `manual` tag excludes this
# target from wildcard expansion; it stays runnable by explicit label.
# gazelle cannot auto-generate this rule because all sources carry the `e2e`
# build constraint; the rule is maintained by hand.

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = [
        "auth_rmhtube_e2e_test.go",
        "gamehub_e2e_test.go",
        "harness.go",
        "supervisor_e2e_test.go",
    ],
    gotags = ["e2e"],
    importpath = "github.com/rmhstudios/rmh-go/e2e",
    tags = ["e2e", "manual"],
    deps = [
        "//go-services/pkg/realtime",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
