load("//bazel:defs.bzl", "go_service_image")

# Per-service OCI images. Kept in a dedicated package so the gazelle-managed
# cmd/*/BUILD.bazel files stay untouched. Standard services use the distroless
# static base; vibe-worker/discord-bot use special bases (see below).

# ── Standard services (distroless static) ────────────────────────────────────
go_service_image(name = "gateway", binary = "//go-services/cmd/gateway:gateway")

go_service_image(name = "gamehub", binary = "//go-services/cmd/gamehub:gamehub")

go_service_image(name = "rmhmusic", binary = "//go-services/cmd/rmhmusic:rmhmusic")

go_service_image(name = "rmhtube", binary = "//go-services/cmd/rmhtube:rmhtube")

go_service_image(name = "rmhbox", binary = "//go-services/cmd/rmhbox:rmhbox")

go_service_image(name = "recap", binary = "//go-services/cmd/recap:recap")

go_service_image(name = "doctrine-worker", binary = "//go-services/cmd/doctrine-worker:doctrine-worker")
