load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "assets_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmhstudios/rmh-go/cmd/assets",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/assets",
        "//go-services/pkg/config",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/objectstore",
        "//go-services/pkg/telemetry",
    ],
)

go_binary(
    name = "assets",
    embed = [":assets_lib"],
    visibility = ["//visibility:public"],
)
