load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "discord-bot_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmhstudios/rmh-go/cmd/discord-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/discordbot",
        "//go-services/pkg/config",
        "//go-services/pkg/db",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)

go_binary(
    name = "discord-bot",
    embed = [":discord-bot_lib"],
    visibility = ["//visibility:public"],
)
