load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gateway_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmhstudios/rmh-go/cmd/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/gateway",
        "//go-services/pkg/auth",
        "//go-services/pkg/config",
        "//go-services/pkg/db",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
    ],
)

go_binary(
    name = "gateway",
    embed = [":gateway_lib"],
    visibility = ["//visibility:public"],
)
