load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rmhmusic_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmhstudios/rmh-go/cmd/rmhmusic",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/rmhmusic",
        "//go-services/pkg/auth",
        "//go-services/pkg/config",
        "//go-services/pkg/db",
        "//go-services/pkg/events",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
        "//go-services/pkg/telemetry",
    ],
)

go_binary(
    name = "rmhmusic",
    embed = [":rmhmusic_lib"],
    visibility = ["//visibility:public"],
)
