load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "supervisor_lib",
    srcs = [
        "main.go",
        "run.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/cmd/supervisor",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/botworker",
        "//go-services/internal/discordbot",
        "//go-services/internal/doctrine",
        "//go-services/internal/recap",
        "//go-services/internal/vibeworker",
        "//go-services/pkg/config",
        "//go-services/pkg/db",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "supervisor",
    embed = [":supervisor_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "supervisor_test",
    srcs = ["main_test.go"],
    embed = [":supervisor_lib"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)
