load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vibe-worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/rmhstudios/rmh-go/cmd/vibe-worker",
    visibility = ["//visibility:private"],
    deps = [
        "//go-services/internal/vibeworker",
        "//go-services/pkg/config",
        "//go-services/pkg/db",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)

go_binary(
    name = "vibe-worker",
    embed = [":vibe-worker_lib"],
    visibility = ["//visibility:public"],
)
