load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "botworker",
    srcs = [
        "deepseek.go",
        "repo.go",
        "run.go",
        "types.go",
        "worker.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/botworker",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)

go_test(
    name = "botworker_test",
    srcs = [
        "repo_test.go",
        "worker_test.go",
    ],
    embed = [":botworker"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)
