load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "botworker",
    srcs = [
        "deepseek.go",
        "dmpolicy.go",
        "image.go",
        "notify.go",
        "repo.go",
        "repo_social.go",
        "run.go",
        "storage.go",
        "ticks.go",
        "types.go",
        "worker.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/botworker",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_test(
    name = "botworker_test",
    srcs = [
        "dmpolicy_test.go",
        "image_test.go",
        "notify_test.go",
        "prompt_test.go",
        "query_test.go",
        "repo_test.go",
        "storage_test.go",
        "worker_test.go",
    ],
    embed = [":botworker"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)
