load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gamehub",
    srcs = [
        "kk.go",
        "manager.go",
        "relay.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/gamehub",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
    ],
)

go_test(
    name = "gamehub_test",
    srcs = ["kk_test.go"],
    embed = [":gamehub"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
    ],
)
