load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "auth_middleware.go",
        "proxy.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/gateway",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/auth",
        "//go-services/pkg/config",
        "//go-services/pkg/httpx",
        "//go-services/pkg/log",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["gateway_test.go"],
    embed = [":gateway"],
    deps = [
        "//go-services/pkg/auth",
        "//go-services/pkg/log",
    ],
)
