load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "recap",
    srcs = [
        "lightsout.go",
        "recap.go",
        "runner.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/recap",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "@com_github_bwmarrin_discordgo//:discordgo",
    ],
)

go_test(
    name = "recap_test",
    srcs = ["recap_test.go"],
    embed = [":recap"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "@com_github_bwmarrin_discordgo//:discordgo",
    ],
)
