load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rmhbox",
    srcs = [
        "coordinator.go",
        "lobby.go",
        "lobby_ops.go",
        "manager.go",
        "minigame.go",
        "minigames.go",
        "registry.go",
        "repo.go",
        "statesync.go",
        "types.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/rmhbox",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_test(
    name = "rmhbox_test",
    srcs = ["rmhbox_test.go"],
    embed = [":rmhbox"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
    ],
)
