load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rmhmusic",
    srcs = [
        "chat.go",
        "events.go",
        "manager.go",
        "queue.go",
        "repo.go",
        "room.go",
        "sync.go",
        "types.go",
        "util.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/rmhmusic",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
    ],
)

go_test(
    name = "rmhmusic_test",
    srcs = ["rmhmusic_test.go"],
    embed = [":rmhmusic"],
    deps = [
        "//go-services/pkg/events",
        "//go-services/pkg/log",
        "//go-services/pkg/realtime",
    ],
)
