load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vibeworker",
    srcs = [
        "capture.go",
        "repo.go",
        "run.go",
        "worker.go",
    ],
    importpath = "github.com/rmhstudios/rmh-go/internal/vibeworker",
    visibility = ["//go-services:__subpackages__"],
    deps = [
        "//go-services/pkg/db",
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)

go_test(
    name = "vibeworker_test",
    srcs = [
        "run_test.go",
        "worker_test.go",
    ],
    embed = [":vibeworker"],
    deps = [
        "//go-services/pkg/log",
        "//go-services/pkg/telemetry",
        "//go-services/pkg/worker",
    ],
)
